<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="7dp"
        app:layout_behavior="@string/bottom_sheet_behavior">


    <View
            android:id="@+id/bottomDialogBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/full_black"
            android:clickable="true"
            android:alpha="0.6"
            android:elevation="8dp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:background="@drawable/shape_new_profile_dialog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarNewProfile"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    style="@style/MainToolbar"
                    app:title="New profile"
                    app:titleTextColor="@color/pure_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/textName"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_setting_name"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbarNewProfile"/>

            <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="9"
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    tools:ignore="LabelFor"
                    app:layout_constraintStart_toEndOf="@id/textName"
                    app:layout_constraintBottom_toBottomOf="@id/textName"/>

            <TextView
                    android:id="@+id/textAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_setting_age"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="8dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textName"/>

            <EditText
                    android:id="@+id/editAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:ems="3"
                    tools:ignore="LabelFor"
                    android:layout_marginStart="4dp"
                    app:layout_constraintStart_toEndOf="@id/textAge"
                    app:layout_constraintBottom_toBottomOf="@id/textAge"/>

            <TextView
                    android:id="@+id/textGender"
                    android:text="@string/profile_setting_gender"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/textAge"
                    app:layout_constraintStart_toStartOf="parent"/>

            <RadioGroup
                    android:id="@+id/groupGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="4dp"
                    app:layout_constraintTop_toTopOf="@id/textGender"
                    app:layout_constraintStart_toEndOf="@id/textGender">

                <RadioButton
                        android:id="@+id/radioMale"
                        android:text="@string/profile_setting_gender_male"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_setting_gender_female"
                        android:textSize="16sp"/>

            </RadioGroup>

            <TextView
                    android:id="@+id/textWeight"
                    android:text="@string/profile_setting_weight"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/groupGender"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="4"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    tools:ignore="LabelFor"
                    app:layout_constraintBottom_toBottomOf="@id/textWeight"
                    app:layout_constraintStart_toEndOf="@id/textWeight"/>

            <TextView
                    android:id="@+id/textHeight"
                    android:text="@string/profile_setting_height"
                    android:textSize="18sp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/textWeight"
                    app:layout_constraintStart_toEndOf="@id/editWeight"/>

            <EditText
                    android:id="@+id/editHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="4"
                    android:layout_marginStart="4dp"
                    tools:ignore="LabelFor"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="@id/editWeight"
                    app:layout_constraintStart_toEndOf="@id/textHeight"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check"
                    app:fabSize="mini"
                    app:backgroundTint="@color/green_700"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/editHeight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnCancel"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    app:fabSize="mini"
                    app:backgroundTint="@color/red_700"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/editHeight"
                    app:layout_constraintStart_toEndOf="@id/btnCreate"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@id/btnCreate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>